cite fix color contrast

--- a/src/style/_testimonial.scss
+++ b/src/style/_testimonial.scss
@@ -25,7 +25,7 @@
             font-weight: 700;
             font-style: normal;
             letter-spacing: 1px;
-            color: #00ad6a;
+            color: #00804F;
         }
     }
 }
