--- a/src/style/general.css
+++ b/src/style/general.css
@@ -522,7 +522,7 @@ img {
   font-weight: 700;
   font-style: normal;
   letter-spacing: 1px;
-  color: #00ad6a;
+  color: #00804F;
 }
 
 @media screen and (min-width: 768px) {
